[project]
name = "faz-utils"
readme = "README.md"
requires-python = ">=3.13"
license = {file = "LICENSE"}
version = "0.1.0"
description = "A collection of utility modules"
authors = [
  { name = "FAZuH", email = "fazuhhh@proton.me" },
]
dependencies = [
    "loguru>=0.7.2",
    "sqlalchemy>=2.0.36",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.urls]
Source = "https://github.com/FAZuH/faz-utils"
Issues = "https://github.com/FAZuH/faz-utils/issues"
Documentation = "https://github.com/FAZuH/faz-utils#readme"

[tool.hatch.build.targets.wheel]
only-packages = true
packages = ["src/faz", "tests/"]

[tool.hatch.version]
path = "src/faz/utils/__about__.py"

[tool.hatch.envs.types]
extra-dependencies = [
  "mypy>=1.0.0",
]
[tool.hatch.envs.types.scripts]
check = "mypy --install-types --non-interactive {args:src/faz tests}"

[tool.coverage.run]
source_pkgs = ["src/faz", "tests"]
branch = true
parallel = true
omit = [
  "src/faz/utils/__about__.py",
]

[tool.coverage.paths]
faz-utils = ["src/faz/utils"]
tests = ["tests"]

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]
