[project]
name = "faz-utils"
readme = "README.md"
requires-python = ">=3.13"
license = {file = "LICENSE"}
version = "0.1.0"
description = "A collection of utility modules"
authors = [
  { name = "FAZuH", email = "fazuhhh@proton.me" },
]
dependencies = [
    "loguru>=0.7.2",
    "sqlalchemy>=2.0.36",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.urls]
Source = "https://github.com/FAZuH/faz-utils"
Issues = "https://github.com/FAZuH/faz-utils/issues"
Documentation = "https://github.com/FAZuH/faz-utils#readme"

[tool.hatch.build.targets.wheel]
only-packages = true
packages = ["src/faz", "tests/"]

[tool.hatch.version]
path = "src/faz/utils/__about__.py"

[tool.hatch.envs.types]
extra-dependencies = [
  "mypy>=1.0.0",
]
[tool.hatch.envs.types.scripts]
check = "mypy --install-types --non-interactive {args:src/faz tests}"

[tool.coverage.run]
source_pkgs = ["src/faz", "tests"]
branch = true
parallel = true
omit = [
  "src/faz/utils/__about__.py",
]

[tool.coverage.paths]
faz-utils = ["src/faz/utils"]
tests = ["tests"]

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]

[tool.black]
line-length = 88
target-version = ['py313']

[tool.ruff]
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".ipynb_checkpoints",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pyenv",
    ".pytest_cache",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    ".vscode",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "site-packages",
    "venv",
]
line-length = 88
indent-width = 4
target-version = "py313"

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F"]
ignore = ["E731"]
fixable = ["ALL"]
unfixable = []
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
docstring-code-format = false
docstring-code-line-length = "dynamic"
